# code_nearby

./: .gitignore  AGENTS.md  LICENSE  README.md  demo_tui.py  pyproject.toml  setup.sh
.claude/plan/: refactor-phase1-evaluate-signature-hash.md  refactor-phase1-split-operations.md  refactor-phase2-review.md  source-fetch-pipeline.md
refactor_plan/: 00_summary_and_roadmap.py  01_split_markdown_generator.py  02_unify_symbol_extraction.py  03_split_operations.py  04_refactor_analyze_file.py  05_unify_signature_extraction.py  06_evaluate_signature_hash.py  07_dependency_inversion.py  08_strategy_pattern_for_docs.py  OPTIMIZED_NO_COMPAT.md  README.md  REVIEW_REPORT.md
src/brain/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  context.py  fs_utils.py  git.py  git_utils.py  graph.py  lang_config.py  markdown_renderer.py  operations.py  storage.py  tree_sitter_utils.py  tui.py
src/brain/operations/: __init__.py  analysis.py  config.py  graph_generator.py  indexing.py  obsidian_indexes.py  sync.py
src/brain/rag/: __init__.py  assemble.py  chunker.py  index.py  retrieve.py  schema.py  synonyms.py
src/code_nearby/: __init__.py  __main__.py  cli.py  config.py  fs_utils.py  graph.py  lang_config.py  mcp_server.py  storage.py  tree_sitter_utils.py  tui.py  watch.py
src/code_nearby/operations/: __init__.py  analysis.py  config.py
src/code_nearby/rag/: __init__.py  assemble.py  chunker.py  context.py  index.py  retrieve.py  schema.py  source_fetch.py  synonyms.py
tests/: test_analyzer.py  test_cli.py  test_context.py  test_git.py  test_git_utils.py  test_graph.py  test_rag_chunker.py  test_rag_cjk.py  test_rag_e2e.py  test_rag_index.py  test_rag_retrieve.py  test_source_fetch.py  test_storage.py  test_sync.py  test_synonyms.py
tests/fixtures/go_pkg/: sample.go
tests/fixtures/java_pkg/: Repository.java
tests/fixtures/js_pkg/: sample.js
tests/fixtures/rust_pkg/: sample.rs
tests/fixtures/sample_pkg/: repository.py
tests/fixtures/ts_pkg/: sample.ts
