[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "brain"
version = "0.1.0"
description = "CLI tools for managing Git repositories."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Knoup" },
]
keywords = ["cli", "git", "repository-management"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "typer>=0.12",
  "textual>=0.80",
  "tree-sitter>=0.25.2",
  "tree-sitter-python>=0.25.0",
  "tree-sitter-javascript>=0.25.0",
  "tree-sitter-typescript>=0.23.2",
  "tree-sitter-go>=0.25.0",
  "tree-sitter-rust>=0.24.2",
  "tree-sitter-java>=0.23.5",
  "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]

[project.scripts]
brain = "brain.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
